[package]
name = "vestalia"
version = "0.1.0"
authors = ["Michael Linback Jr <michael@bitnexus.io>"]
edition = "2021"
description = "Vestaboard API wrapper"
readme = "README.md"
homepage = "https://bitnexus.io/"
repository = "https://github.com/HowIChrgeLazer/vestalia"
license = "MIT"
keywords = ["vestaboard", "api", "async", "wrapper"]
categories = ["api-bindings"]
exclude = [".gitignore"]

[dependencies]
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["macros"] }

[dev-dependencies]
mockito = "0.31.0"

[[test]]
name = "format"
path = "tests/format.rs"